--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { version = "2.0.4", features = ["full", "visit-mut"] }
+syn = { version = "2.0.4", features = ["full", "visit", "visit-mut", "fold", "extra-traits"] }
 
 proc-macro2 = "1.0.51"
 quote = "1.0.23"
